# VfWcodecs

./: CMakeLists.txt  CMakePresets.json  README.md
JXS21122codec/: CMakeLists.txt  JXS_encode.c  JXSalgorithm.c  JXScodec.h  JXSvfwencode.c  README.md  codec.c
JXS21122codec/libjxs/: jxs.lib
JXScodec/: CMakeLists.txt  DriverProc.c  JXS_encode.c  JXS_mono_encode.c  JXSalgorithm.c  JXSvfwdecode.c  codec.c  file_io.h
JXScodec/libjxs/: jxs_utils.lib  libjxs.h
MRLE/: CMakeLists.txt  MRLE.h  MRLdecode.cpp  MRLencode.cpp  README.md
RLEcodec/: CMakeLists.txt  DriverProc.c  README.md  RLEalgorithm.c  RLEcodec.h  RLEvfwdecode.c  RLEvfwencode.c  codec.c
SvtJXScodec/: CMakeLists.txt  DriverProc.c  README.md  SvtJXS_encode.c  SvtJXSalgorithm.c  SvtJXScodec.h  SvtJXSvfwXcode.c  SvtJXSvfwdecode.c  SvtJXSvfwencode.c  codec.c
SvtJXScodec/svtjxs/: SvtJpegxs.lib  SvtJpegxsd.lib
